appication-setup/el-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-event-listener-datamon
  namespace: datamon
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-datamon
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: el-event-listener-datamon
    weight: 100
  port:
    targetPort: http-listener
  wildcardPolicy: None
